<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.CharacterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/autoCompleteNameCharacter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/character"
                    android:textColorHint="@color/colorLight"
                    android:textColor="@color/colorPrimary"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>



            <ImageView
                android:id="@+id/imgCaracterThumbnail"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/character_thumbnail"/>

            <Button
                android:id="@+id/buttonListComics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/list_comics"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorLight"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>